--- a/frontend/styles/views/yourprofile/yourprofile-view.css
+++ b/frontend/styles/views/yourprofile/yourprofile-view.css
@@ -4,3 +4,12 @@
 :host {
   display: block;
 }
+
+.avatar-box {
+  border-radius: 8px;
+  margin:10px;
+}
+
+.avatar-box.selected {
+  background-color: var(--lumo-primary-color);
+} 
