--- a/frontend/styles/views/main/main-view.css
+++ b/frontend/styles/views/main/main-view.css
@@ -18,9 +18,9 @@
     height: calc(var(--lumo-size-l) * 1.5);
 }
 #logo h1 {
-    font-size: var(--lumo-font-size-xl);
+    font-size: var(--lumo-font-size-l);
     font-weight: 600;
-    margin: 0 var(--lumo-space-s);
+    margin: 0 var(--lumo-space-m);
 }
 
 vaadin-tab {
