--- a/frontend/styles/views/yourprofile/yourprofile-view.css
+++ b/frontend/styles/views/yourprofile/yourprofile-view.css
@@ -1,8 +1,6 @@
-#yourprofile-view {
-  display: block;
-}
-:host {
-  display: block;
+#your-profile-view {
+  max-width: 400px;
+  margin: auto;
 }
 
 .avatar-box {
@@ -12,4 +10,4 @@
 
 .avatar-box.selected {
   background-color: var(--lumo-primary-color);
-} 
+}
