--- a/frontend/styles/views/yourprofile/yourprofile-view.css
+++ b/frontend/styles/views/yourprofile/yourprofile-view.css
@@ -1,6 +1,8 @@
-#your-profile-view {
-  max-width: 400px;
-  margin: auto;
+#yourprofile-view {
+  display: block;
+}
+:host {
+  display: block;
 }
 
 .avatar-box {
@@ -10,4 +12,4 @@
 
 .avatar-box.selected {
   background-color: var(--lumo-primary-color);
-}
+} 
