UI updates: matching new SVC templates

--- a/frontend/themes/ce-demo/styles.css
+++ b/frontend/themes/ce-demo/styles.css
@@ -23,3 +23,28 @@
 .min-h-xl {
   min-height: var(--lumo-size-xl);
 }
+
+/* === DRAWER === */
+
+[slot="drawer"] {
+  background-image: linear-gradient(0deg, var(--lumo-contrast-5pct), var(--lumo-contrast-5pct));
+}
+
+[slot="drawer"] a[highlight] {
+  color: var(--lumo-primary-text-color);
+}
+
+[slot="drawer"] a[highlight]::before {
+  background-color: var(--lumo-primary-color-10pct);
+  border-radius: var(--lumo-border-radius);
+  bottom: calc(var(--lumo-space-xs) * 0.5);
+  content: "";
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: calc(var(--lumo-space-xs) * 0.5);
+}
+
+[slot="drawer"] nav a iron-icon {
+  padding: calc(var(--lumo-space-xs) * 0.5);
+}
