--- a/frontend/themes/ce-demo/generic-styles.css
+++ b/frontend/themes/ce-demo/generic-styles.css
@@ -229,6 +229,9 @@
 }
 
 /* === Display === */
+.hidden {
+  display: none;
+}
 .flex {
   display: flex;
 }
@@ -976,6 +979,36 @@
 
 /* === Responsive design === */
 @media (min-width: 640px) {
+  .sm\:text-2xs {
+    font-size: var(--lumo-font-size-xxs);
+  }
+  .sm\:text-xs {
+    font-size: var(--lumo-font-size-xs);
+  }
+  .sm\:text-s {
+    font-size: var(--lumo-font-size-s);
+  }
+  .sm\:text-m {
+    font-size: var(--lumo-font-size-m);
+  }
+  .sm\:text-l {
+    font-size: var(--lumo-font-size-l);
+  }
+  .sm\:text-xl {
+    font-size: var(--lumo-font-size-xl);
+  }
+  .sm\:text-2xl {
+    font-size: var(--lumo-font-size-xxl);
+  }
+  .sm\:text-3xl {
+    font-size: var(--lumo-font-size-xxxl);
+  }
+  .sm\:flex {
+    display: flex;
+  }
+  .sm\:hidden {
+    display: none;
+  }
   .sm\:flex-col {
     flex-direction: column;
   }
@@ -984,6 +1017,36 @@
   }
 }
 @media (min-width: 768px) {
+  .md\:text-2xs {
+    font-size: var(--lumo-font-size-xxs);
+  }
+  .md\:text-xs {
+    font-size: var(--lumo-font-size-xs);
+  }
+  .md\:text-s {
+    font-size: var(--lumo-font-size-s);
+  }
+  .md\:text-m {
+    font-size: var(--lumo-font-size-m);
+  }
+  .md\:text-l {
+    font-size: var(--lumo-font-size-l);
+  }
+  .md\:text-xl {
+    font-size: var(--lumo-font-size-xl);
+  }
+  .md\:text-2xl {
+    font-size: var(--lumo-font-size-xxl);
+  }
+  .md\:text-3xl {
+    font-size: var(--lumo-font-size-xxxl);
+  }
+  .md\:flex {
+    display: flex;
+  }
+  .md\:hidden {
+    display: none;
+  }
   .md\:flex-col {
     flex-direction: column;
   }
@@ -992,6 +1055,36 @@
   }
 }
 @media (min-width: 1024px) {
+  .lg\:text-2xs {
+    font-size: var(--lumo-font-size-xxs);
+  }
+  .lg\:text-xs {
+    font-size: var(--lumo-font-size-xs);
+  }
+  .lg\:text-s {
+    font-size: var(--lumo-font-size-s);
+  }
+  .lg\:text-m {
+    font-size: var(--lumo-font-size-m);
+  }
+  .lg\:text-l {
+    font-size: var(--lumo-font-size-l);
+  }
+  .lg\:text-xl {
+    font-size: var(--lumo-font-size-xl);
+  }
+  .lg\:text-2xl {
+    font-size: var(--lumo-font-size-xxl);
+  }
+  .lg\:text-3xl {
+    font-size: var(--lumo-font-size-xxxl);
+  }
+  .lg\:flex {
+    display: flex;
+  }
+  .lg\:hidden {
+    display: none;
+  }
   .lg\:flex-col {
     flex-direction: column;
   }
@@ -1000,6 +1093,36 @@
   }
 }
 @media (min-width: 1280px) {
+  .xl\:text-2xs {
+    font-size: var(--lumo-font-size-xxs);
+  }
+  .xl\:text-xs {
+    font-size: var(--lumo-font-size-xs);
+  }
+  .xl\:text-s {
+    font-size: var(--lumo-font-size-s);
+  }
+  .xl\:text-m {
+    font-size: var(--lumo-font-size-m);
+  }
+  .xl\:text-l {
+    font-size: var(--lumo-font-size-l);
+  }
+  .xl\:text-xl {
+    font-size: var(--lumo-font-size-xl);
+  }
+  .xl\:text-2xl {
+    font-size: var(--lumo-font-size-xxl);
+  }
+  .xl\:text-3xl {
+    font-size: var(--lumo-font-size-xxxl);
+  }
+  .xl\:flex {
+    display: flex;
+  }
+  .xl\:hidden {
+    display: none;
+  }
   .xl\:flex-col {
     flex-direction: column;
   }
@@ -1008,6 +1131,36 @@
   }
 }
 @media (min-width: 1536px) {
+  .\32xl\:text-2xs {
+    font-size: var(--lumo-font-size-xxs);
+  }
+  .\32xl\:text-xs {
+    font-size: var(--lumo-font-size-xs);
+  }
+  .\32xl\:text-s {
+    font-size: var(--lumo-font-size-s);
+  }
+  .\32xl\:text-m {
+    font-size: var(--lumo-font-size-m);
+  }
+  .\32xl\:text-l {
+    font-size: var(--lumo-font-size-l);
+  }
+  .\32xl\:text-xl {
+    font-size: var(--lumo-font-size-xl);
+  }
+  .\32xl\:text-2xl {
+    font-size: var(--lumo-font-size-xxl);
+  }
+  .\32xl\:text-3xl {
+    font-size: var(--lumo-font-size-xxxl);
+  }
+  .\32xl\:flex {
+    display: flex;
+  }
+  .\32xl\:hidden {
+    display: none;
+  }
   .\32xl\:flex-col {
     flex-direction: column;
   }
